force-app/main/default/objects/ISC_Email_Setting__c/ISC_Email_Setting__c.object-meta.xml
<CustomObject>
    <label>Email Setting</label>
    <nameField>
        <label>Email Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>