force-app/main/default/objects/ISC_Email_Setting__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Category</label>
    <referenceTo>ISC_Category__c</referenceTo>
    <relationshipLabel>Email Settings</relationshipLabel>
    <relationshipName>Email_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>