force-app/main/default/objects/ISC_Email_Setting__c/fields/Category_Path__c.field-meta.xml
<CustomField>
    <fullName>Category_Path__c</fullName>
    <formula>Category__r.Full_Path__c</formula>
    <label>Category Path</label>
    <type>Text</type>
</CustomField>