force-app/main/default/objects/ISC_Email_Setting__c/fields/Email2Case_Address__c.field-meta.xml
<CustomField>
    <fullName>Email2Case_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email2Case Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ISC_Email_Setting__c.Type__c</field>
            <operation>equals</operation>
            <value>Email2Case</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ISC_Email_Setting__c</referenceTo>
    <relationshipLabel>Email Settings (Email2Case Address)</relationshipLabel>
    <relationshipName>Email_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>