force-app/main/default/objects/ISC_Email_Setting__c/fields/Email_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Email_Redirect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Redirect</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ISC_Email_Setting__c.Type__c</field>
            <operation>equals</operation>
            <value>Org Wide</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ISC_Email_Setting__c</referenceTo>
    <relationshipLabel>Email Settings</relationshipLabel>
    <relationshipName>Email2Case</relationshipName>
    <type>Lookup</type>
</CustomField>