force-app/main/default/objects/ISC_Email_Setting__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <formula>System_Address__r.Inactive__c</formula>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>