force-app/main/default/objects/ISC_Email_Setting__c/fields/Org_Wide_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_ID__c</fullName>
    <formula>System_Address__r.ObjectID__c</formula>
    <label>Org Wide ID</label>
    <type>Text</type>
</CustomField>