force-app/main/default/objects/ISC_Email_Setting__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <formula>Category__r.Queue__r.Name</formula>
    <label>Queue</label>
    <type>Text</type>
</CustomField>