force-app/main/default/objects/ISC_Email_Setting__c/fields/System_Address__c.field-meta.xml
<CustomField>
    <fullName>System_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>System Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ISC_System_Record__c.Type__c</field>
            <operation>equals</operation>
            <value>Org Wide Address, Email2Case</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ISC_System_Record__c</referenceTo>
    <relationshipLabel>Email Settings</relationshipLabel>
    <relationshipName>Email_Settings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>