force-app/main/default/objects/ISC_Email_Setting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Org Wide</fullName>
                <default>true</default>
                <label>Org Wide</label>
            </value>
            <value>
                <fullName>Email2Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>