force-app/main/default/objects/ISC_Email_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Inactive__c</columns>
    <columns>Category__c</columns>
    <columns>Category_Path__c</columns>
    <columns>Queue__c</columns>
    <columns>Email_Redirect__c</columns>
    <columns>Email2Case_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>